added code to display scrambled word

--- a/src/app/scramble-word/html/scramble-word.html
+++ b/src/app/scramble-word/html/scramble-word.html
@@ -16,11 +16,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 ng-bind="scrambleWordVM.greeting"></h3>
+                    <h3 ng-bind="scrambleWordVM.word"></h3>
+                    <h3 ng-bind="scrambleWordVM.wordArray"></h3>
+					<h3 ng-bind="scrambleWordVM.scrambledWordArray"></h3>
                 </div>
             </div>
         </div>
     </section>
-
 
 </div>
