--- a/src/app/scramble-word/scss/_scramble-word.scss
+++ b/src/app/scramble-word/scss/_scramble-word.scss
@@ -3,7 +3,7 @@
     h3 {
         text-align: center;
         color: $text-secondary;
-        margin-top: 120px;
+        margin: 45px 0;
     }
 
 }
