--- a/src/app/scramble-word/scss/_scramble-word.scss
+++ b/src/app/scramble-word/scss/_scramble-word.scss
@@ -6,4 +6,20 @@
         margin: 45px 0;
     }
 
+    .word {
+        text-align: center;
+        margin-top: 120px;
+        font-size: 28px;
+    }
+
+    .letter {
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        line-height: 50px;
+        text-align: center;
+        margin: 0 15px;
+        border: 1px solid black;
+    }
+
 }
