--- a/src/main.css
+++ b/src/main.css
@@ -4231,3 +4231,19 @@ button {
   text-align: center;
   color: #81888D;
   margin: 45px 0; }
+
+/* line 9, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
+.scramble-word .word {
+  text-align: center;
+  margin-top: 120px;
+  font-size: 28px; }
+
+/* line 15, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
+.scramble-word .letter {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  margin: 0 15px;
+  border: 1px solid black; }
