--- a/src/app/scramble-word/html/scramble-word.html
+++ b/src/app/scramble-word/html/scramble-word.html
@@ -1,4 +1,4 @@
-<div class="scramble-word">
+<div class="scramble-word" ng-keypress="scrambleWordVM.hello();">
 
     <section class="hero">
         <div class="overlay">
@@ -16,6 +16,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
+
+					<h3 ng-bind="scrambleWordVM.letterPressed"></h3>
 
 					<div class="word">
 						<div class="letter"
