--- a/src/app/scramble-word/html/scramble-word.html
+++ b/src/app/scramble-word/html/scramble-word.html
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="col-md-12">
 
-					<div class="word">
+					<div class="word animated" ng-class="scrambleWordVM.data.animation">
 						<div class="letter"
 							ng-repeat="letterObject in scrambleWordVM.data.scrambledWordArray"
 							ng-bind="letterObject.letter"
