--- a/src/main.css
+++ b/src/main.css
@@ -4235,7 +4235,7 @@ button {
 /* line 9, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
 .scramble-word .word {
   text-align: center;
-  margin-top: 120px;
+  margin: 120px 0;
   font-size: 28px; }
 
 /* line 15, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
