made word scramble responsive

--- a/src/main.css
+++ b/src/main.css
@@ -4253,3 +4253,12 @@ button {
 .scramble-word .letter.is-typed {
   background: #D85339;
   color: #FFFFFF; }
+
+@media screen and (max-width: 991px) {
+  /* line 32, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
+  .scramble-word .letter {
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    margin: 0 5px;
+    font-size: 16px; } }
