--- a/src/app/scramble-word/scss/_scramble-word.scss
+++ b/src/app/scramble-word/scss/_scramble-word.scss
@@ -28,4 +28,14 @@
         color: $primary;
     }
 
+	@media screen and (max-width: $screen-sm-max) {
+        .letter {
+            width: 35px;
+            height: 35px;
+            line-height: 35px;
+            margin: 0 5px;
+            font-size: 16px;
+        }
+    }
+
 }
