added reset game and reset round buttons, more styling

--- a/src/app/scramble-word/html/scramble-word.html
+++ b/src/app/scramble-word/html/scramble-word.html
@@ -27,6 +27,19 @@
 
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="button-container">
+                        <button ng-click="scrambleWordVM.resetGame()">
+                            Reset Game
+                        </button>
+                        <button class="mod-reset" ng-click="scrambleWordVM.resetRound()">
+                            Reset Round
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
