--- a/src/main.css
+++ b/src/main.css
@@ -4239,13 +4239,35 @@ button {
   margin: 45px 0; }
 
 /* line 9, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
-.scramble-word .word {
+.scramble-word .count-container {
   text-align: center;
   margin-top: 120px;
-  margin-bottom: 64px;
-  height: 80px; }
+  margin-bottom: 64px; }
 
 /* line 16, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
+.scramble-word .count-item-container {
+  background: lime;
+  display: inline-block; }
+
+/* line 21, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
+.scramble-word .count-item {
+  color: #D85339;
+  display: inline-block;
+  font-size: 18px;
+  font-weight: 500; }
+
+/* line 28, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
+.scramble-word p {
+  color: #D85339;
+  display: inline-block;
+  font-size: 18px; }
+
+/* line 34, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
+.scramble-word .word {
+  text-align: center;
+  margin-bottom: 64px; }
+
+/* line 39, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
 .scramble-word .letter {
   display: inline-block;
   width: 80px;
@@ -4257,40 +4279,40 @@ button {
   color: #FFBD88;
   font-size: 48px; }
 
-/* line 28, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
+/* line 51, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
 .scramble-word .letter.is-typed {
   background: #FFBD88;
   color: #FFFFFF; }
 
-/* line 33, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
+/* line 56, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
 .scramble-word .button-container {
   margin-bottom: 120px;
   text-align: center; }
 
-/* line 38, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
+/* line 61, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
 .scramble-word button.mod-reset {
   margin-left: 35px; }
 
 @media screen and (max-width: 767px) {
-  /* line 43, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
+  /* line 66, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
   .scramble-word .word {
     height: 35px;
     margin-top: 64px;
     margin-bottom: 32px; }
-  /* line 49, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
+  /* line 72, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
   .scramble-word .letter {
     width: 35px;
     height: 35px;
     line-height: 35px;
     margin: 0 5px;
     font-size: 16px; }
-  /* line 57, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
+  /* line 80, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
   .scramble-word .button-container {
     margin-bottom: 64px; }
-  /* line 61, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
+  /* line 84, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
   .scramble-word button {
     padding: 15px 25px;
     font-size: 12px; }
-  /* line 66, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
+  /* line 89, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
   .scramble-word button.mod-reset {
     margin-left: 25px; } }
