finished scramble word interval feature

--- a/src/app/scramble-word/html/scramble-word.html
+++ b/src/app/scramble-word/html/scramble-word.html
@@ -37,8 +37,8 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="button-container">
-                        <button ng-click="scrambleWordVM.resetGame()">
-                            Reset Game
+                        <button ng-click="scrambleWordVM.resetWord()">
+                            Reset Word
                         </button>
                         <button class="mod-reset" ng-click="scrambleWordVM.resetRound()">
                             Reset Round
