--- a/src/app/shared/html/message-modal.html
+++ b/src/app/shared/html/message-modal.html
@@ -7,5 +7,5 @@
 </div>
 
 <div class="modal-footer">
-    <button ng-click="modalInfoVM.ok()">OK</button>
+    <button ng-click="modalInfoVM.ok()" ng-bind="modalInfoVM.actionText"></button>
 </div>
