added button hover color

--- a/src/app/shared/scss/_button.scss
+++ b/src/app/shared/scss/_button.scss
@@ -8,7 +8,7 @@ button {
     font-size: 18px;
 
     &:hover {
-        color: $primary-light;
-        background: $primary;
+        color: $primary;
+        background: #F4A460;
     }
 }
