--- a/src/app/shared/scss/_modal.scss
+++ b/src/app/shared/scss/_modal.scss
@@ -9,8 +9,8 @@ body.modal-open {
     .modal-header {
         text-align: center;
         color: $primary;
-        background: $accent-hover;
-        border-bottom: 2px solid $accent-hover;
+        background: $primary-light;
+        border-bottom: 2px solid $primary-light;
         padding: 15px;
 
         h3 { font-weight: 400; }
@@ -35,13 +35,13 @@ body.modal-open {
             padding-bottom: 10px;
             border: 1px solid transparent;
 
-            background: $accent-hover;
+            background: $primary-light;
             color: $primary;
 
             &:hover {
-                background: $primary;
-                color: $accent-hover;
-                border: 1px solid $accent-hover;
+                background: $primary-dark;
+                color: $primary;
+                border: 1px solid $primary-light;
             }
         }
     }
