--- a/src/app/tic-tac-toe/scss/_tic-tac-toe.scss
+++ b/src/app/tic-tac-toe/scss/_tic-tac-toe.scss
@@ -18,9 +18,11 @@
 		.board-value,
 		.board-title {
 			display: inline-block;
-			font-size: 24px;
+			font-size: 28px;
+			font-weight: 700;
 			color: $primary-light;
 			margin-top: 120px;
+			margin-left: 10px;
 		}
 	}
 
