--- a/src/app/tic-tac-toe/scss/_tic-tac-toe.scss
+++ b/src/app/tic-tac-toe/scss/_tic-tac-toe.scss
@@ -12,7 +12,6 @@
 	}
 
 	.content {
-		margin-top: 64px;
 		text-align: center;
 
 		.board-value,
@@ -23,6 +22,10 @@
 			color: $primary-light;
 			margin-top: 120px;
 			margin-left: 10px;
+
+			@media screen and (max-width: $screen-xs-max) {
+				margin-top: 64px;
+			}
 		}
 	}
 
@@ -78,6 +81,7 @@
 		}
 
 		@media screen and (max-width: $screen-xs-max) {
+
 			.square-container {
 				height: 75px;
 			}
@@ -89,6 +93,10 @@
 
 			i {
 				font-size: 3em;
+			}
+
+			button {
+				margin-bottom: 64px;
 			}
 	    }
 	}
