added transitions to cards

--- a/src/app/shared/scss/_card.scss
+++ b/src/app/shared/scss/_card.scss
@@ -12,6 +12,7 @@
         border-radius: 5px;
         display: inline-block;
         background: $primary-light;
+        @include transition(all .5s ease-in);
 
         &:hover {
             background: $accent-hover;
