--- a/src/app/projects/scss/_projects.scss
+++ b/src/app/projects/scss/_projects.scss
@@ -2,4 +2,12 @@
     .hero {
         @include gradient-horizontal($accent-hover, $primary-light);
     }
+
+    .card-section {
+	    i { 
+	    	transition: all .5s ease-in-out;
+	    	&:hover { transform: scale(1.1); }
+	    }
+	}
+
 }
