--- a/src/app/shared/scss/_card.scss
+++ b/src/app/shared/scss/_card.scss
@@ -12,10 +12,11 @@
         border-radius: 5px;
         display: inline-block;
         background: $primary-light;
-        @include transition(all .5s ease-in);
+        @include transition(all .5s ease-in-out);
 
         &:hover {
             background: $accent-hover;
+            transform: scale(1.1); 
         }
 
         @media screen and (max-width: $screen-sm-max) {
