--- a/src/main.scss
+++ b/src/main.scss
@@ -45,3 +45,4 @@
 @import "app/tic-tac-toe/scss/tic-tac-toe";
 @import "app/sudouku/scss/sudouku";
 @import "app/scramble-word/scss/scramble-word";
+@import "app/to-do-list/scss/to-do-list";
