added todo list to projects

--- a/src/app/projects/html/projects.html
+++ b/src/app/projects/html/projects.html
@@ -31,13 +31,21 @@
 	                  </a>
 	              </div>
 	            </div>
-				<div class="col-md-4">
-				<div class="card-container">
-					<a ui-sref="main.sudouku">
-						<p class="card-container-header">Sudouku</p>
-						<i class="card-container-logo fa fa-puzzle-piece fa-3x"></i>
-					</a>
+	            <div class="col-md-4">
+					<div class="card-container">
+						<a ui-sref="main.to-do-list">
+							<p class="card-container-header">To Do List</p>
+							<i class="card-container-logo fa fa-puzzle-piece fa-3x"></i>
+						</a>
+					</div>
 				</div>
+				<div class="col-md-4">
+					<div class="card-container">
+						<a ui-sref="main.sudouku">
+							<p class="card-container-header">Sudouku</p>
+							<i class="card-container-logo fa fa-puzzle-piece fa-3x"></i>
+						</a>
+					</div>
 				</div>
 	        </div>
 	    </div>
